# zgrnet

./: .bazelignore  .bazelrc  .gitignore  AGENTS.md  BUILD.bazel  MODULE.bazel  README.md  YAMUX_DEADLOCK_NOTE.md  extensions.bzl
e2e/: BUILD.bazel
e2e/benchmark/: BUILD.bazel
e2e/benchmark/kcp_stream/: BUILD.bazel
e2e/benchmark/relay/: BUILD.bazel  relay_bench_test.go
e2e/benchmark/udp/: BUILD.bazel
e2e/cli/: BUILD.bazel  run.go
e2e/cli/testdata/: cases.json  seed_key.hex
e2e/dns/go/: main.go
e2e/kcp/: BUILD.bazel  config_full.json  interop_test.go
e2e/kcp/go/: BUILD.bazel  main.go
e2e/kcp/rust/: BUILD.bazel
e2e/kcp/zig/: BUILD.bazel
e2e/lan/go/: BUILD.bazel  run.go
e2e/listener/: BUILD.bazel  config.json  interop_test.go
e2e/listener/go/: BUILD.bazel  main.go
e2e/listener/rust/: BUILD.bazel
e2e/listener/zig/: BUILD.bazel
e2e/node/: BUILD.bazel  interop_test.go
e2e/node/go/: BUILD.bazel  main.go
e2e/node/runner/: BUILD.bazel  main.go
e2e/node/rust/: BUILD.bazel
e2e/node_host/go/: BUILD.bazel  main.go
e2e/proxy/: BUILD.bazel  config.json  interop_test.go
e2e/proxy/go/: BUILD.bazel  main.go
e2e/proxy/rust/: BUILD.bazel
e2e/proxy/zig/: BUILD.bazel
e2e/relay/: BUILD.bazel  relay_test.go
e2e/udp/: README.md  config.json
e2e/zgrnet/: BUILD.bazel  run.go
e2e/zgrnet/testdata/: cases.json
examples/kcp_test/: BUILD.bazel  README.md  config.json  run.sh  run_bazel.sh  run_full.sh
examples/kcp_test/go/: BUILD.bazel  go.mod  main.go
examples/kcp_test/rust/: Cargo.toml
examples/kcp_test/zig/: BUILD.bazel  build.zig  build.zig.zon
examples/node_test/: BUILD.bazel  config.json  interop_test.go  run_bazel.sh
examples/node_test/go/: BUILD.bazel
examples/node_test/runner/: BUILD.bazel  main.go
examples/node_test/zig/: BUILD.bazel
examples/proxy_test/: BUILD.bazel  run_bazel.sh
examples/proxy_test/go/: BUILD.bazel  go.mod  main.go
examples/proxy_test/rust/: Cargo.toml
examples/proxy_test/zig/: BUILD.bazel  build.zig  build.zig.zon
examples/stream_test/: BUILD.bazel
examples/stream_test/go/: BUILD.bazel  go.mod  main.go
examples/stream_test/rust/: Cargo.toml
examples/stream_test/zig/: BUILD.bazel  build.zig  build.zig.zon
go/: BUILD.bazel  coverage.html  coverage.out  go.mod  go.sum
go/cmd/apitest/: BUILD.bazel  main.go
go/cmd/e2etest/: BUILD.bazel  main.go
go/cmd/proxy/: main.go
go/cmd/smoketest/: BUILD.bazel  main.go
go/cmd/sockopt_test/: main.go
go/cmd/zgrnet/: BUILD.bazel  main.go
go/cmd/zgrnet-proxy/: BUILD.bazel  main.go
go/cmd/zgrnetd/: BUILD.bazel  main.go
go/cmd/zigor/: BUILD.bazel  main.go
go/conn/: conn.go  conn_test.go  consts.go  dial.go  dial_test.go  errors.go  listener.go  listener_test.go  manager.go  manager_test.go  rekey_test.go  synctest_test.go  tick_test.go
go/examples/host_test/: BUILD.bazel  main.go
go/examples/kcp_test/: main.go
go/examples/net_test/: main.go
go/examples/stream_test/: main.go
go/host/: host.go  host_test.go  peer.go  peer_manager.go
go/net/: BUILD.bazel  conn.go  conn_test.go  coverage_test.go  dial.go  dial_test.go  listener.go  listener_test.go  manager.go  manager_test.go  rekey_test.go  synctest_test.go  tick_test.go  transport_mock.go  transport_mock_test.go  transport_udp.go  udp.go  udp_test.go
go/noise/: bench_test.go  cipher.go  cipher_test.go  conn.go  conn_test.go  handshake.go  handshake_test.go  keypair.go  keypair_test.go  listener.go  listener_test.go  manager.go  manager_test.go  message.go  replay.go  session.go  session_test.go  state_test.go  test_vectors.go  test_vectors_test.go  transport.go  transport_mock.go  transport_test.go
go/pkg/api/: BUILD.bazel  admin.html  server.go  server_test.go
go/pkg/cli/: BUILD.bazel  client.go  client_test.go  context.go  context_test.go  daemon.go  daemon_test.go  daemon_unix.go  daemon_windows.go
go/pkg/config/: BUILD.bazel  config.go  config_test.go  diff.go  diff_test.go  identity.go  identity_test.go  interop_test.go  labels.go  labels_test.go  manager.go  manager_test.go  policy.go  policy_test.go  route.go  route_test.go
go/pkg/dns/: BUILD.bazel  dns.go  dns_test.go  fakeip.go  fakeip_test.go  integration_test.go  server.go  server_test.go
go/pkg/dnsmgr/: BUILD.bazel  dnsmgr.go
go/pkg/host/: BUILD.bazel  host.go  host_test.go  ipalloc.go  ipalloc_test.go  packet.go  packet_test.go
go/pkg/kcp/: BUILD.bazel  conn.go  conn_test.go  fec.go  fec_test.go  frame.go  frame_test.go  kcp.go  kcp_test.go  mux.go  mux_test.go  service.go  service_test.go  stream.go  throughput_test.go
go/pkg/lan/: BUILD.bazel  auth.go  auth_test.go  handler.go  handler_test.go  lan.go  lan_test.go  store.go
go/pkg/listener/: BUILD.bazel  listener.go  registry.go  registry_test.go
go/pkg/net/: BUILD.bazel  conn.go  conn_test.go  consts.go  coverage_test.go  dial.go  dial_test.go  errors.go  leak_test.go  listener.go  manager.go  (+22 more)
go/transport/: bench_test.go  roaming_test.go  udp.go  udp_listener.go  udp_test.go
rust/: BUILD.bazel  Cargo.toml  build.rs
rust/benches/: noise_bench.rs
rust/examples/: host_test.rs  kcp_interop.rs  smoketest.rs  stream_test.rs
rust/kcp/: ikcp.c
rust/src/: cipher.rs  config.rs  conn.rs  handshake.rs  host.rs  kcp.rs  keypair.rs  lib.rs  manager.rs  message.rs  net.rs  node.rs  peer.rs  peer_manager.rs  replay.rs  session.rs  state.rs  stream.rs  transport.rs  udp.rs  udp_listener.rs
zig/: BUILD.bazel  admin.html  bench_boringssl.c  bench_full  build.zig  build.zig.zon  build_options.zig  cmd_zgrnet.zig  cmd_zgrnetd.zig  cmd_zigor.zig  test_boringssl  test_boringssl.zig  test_interop.zig  tun_build_options.zig
zig/dnsmgr/: BUILD.bazel
zig/examples/: host_test.zig  kcp_interop.zig  kcp_stream_test.zig
zig/include/: dnsmgr.h  tun.h
zig/src/: bench.zig  cipher.zig  config.zig  conn.zig  host.zig  kcp.zig  manager.zig  net.zig  node.zig  noise.zig  peer.zig  peer_manager.zig  replay.zig  runtime.zig  session.zig  signal.zig  stream.zig  timer_impl.zig  transport.zig  udp.zig  udp_listener.zig
zig/tools/: x25519_probe.zig
zig/tun/: BUILD.bazel
(+309 files in other folders)
