"""zgrnet - A networking library with Rust, Go, and Zig SDKs."""

module(
    name = "zgrnet",
    version = "0.1.0",
)

# Rust toolchain
bazel_dep(name = "rules_rust", version = "0.68.1")

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(edition = "2021")
use_repo(rust, "rust_toolchains")

register_toolchains("@rust_toolchains//:all")

# Rust crates
crate = use_extension("@rules_rust//crate_universe:extension.bzl", "crate")
crate.from_cargo(
    name = "crates",
    cargo_lockfile = "//rust:Cargo.lock",
    manifests = ["//rust:Cargo.toml"],
)
use_repo(crate, "crates")

# Go toolchain
bazel_dep(name = "rules_go", version = "0.59.0")
bazel_dep(name = "gazelle", version = "0.40.0")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.23.4")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//go:go.mod")
use_repo(
    go_deps,
    "org_golang_x_crypto",
)

# Zig toolchain (custom rules, official Zig 0.15.2)
zig_toolchain = use_extension("//:extensions.bzl", "zig_toolchain")
use_repo(zig_toolchain, "zig_toolchain")

# C/C++ rules
bazel_dep(name = "rules_cc", version = "0.1.1")

# Skylib for build settings
bazel_dep(name = "bazel_skylib", version = "1.7.1")

# BoringSSL
bazel_dep(name = "boringssl", version = "0.20250212.0")
