load("@rules_go//go:def.bzl", "go_library", "go_test")

# Go SDK - Noise Protocol implementation
go_library(
    name = "noise",
    srcs = glob(["noise/*.go"], exclude = ["noise/*_test.go"]),
    importpath = "github.com/vibing/zgrnet/noise",
    visibility = ["//visibility:public"],
    deps = [
        "@org_golang_x_crypto//blake2s",
        "@org_golang_x_crypto//chacha20poly1305",
        "@org_golang_x_crypto//curve25519",
        "@org_golang_x_crypto//hkdf",
    ],
)

go_test(
    name = "noise_test",
    srcs = glob(["noise/*_test.go"]),
    embed = [":noise"],
)

# Connection layer - manages connections with Dial/Accept, Tick for timers
go_library(
    name = "conn",
    srcs = glob(["conn/*.go"], exclude = ["conn/*_test.go"]),
    importpath = "github.com/vibing/zgrnet/conn",
    visibility = ["//visibility:public"],
    deps = [":noise"],
)

go_test(
    name = "conn_test",
    srcs = glob(["conn/*_test.go"]),
    embed = [":conn"],
    deps = [":noise"],
)

# Net layer - UDP-based network with peer management
go_library(
    name = "net",
    srcs = glob(["net/*.go"], exclude = ["net/*_test.go"]),
    importpath = "github.com/vibing/zgrnet/net",
    visibility = ["//visibility:public"],
    deps = [
        ":conn",
        ":noise",
    ],
)

go_test(
    name = "net_test",
    srcs = glob(["net/*_test.go"]),
    embed = [":net"],
    deps = [
        ":conn",
        ":noise",
    ],
)
