load("@rules_go//go:def.bzl", "go_library", "go_test")

# Go SDK - Noise Protocol implementation
go_library(
    name = "noise",
    srcs = glob(["pkg/noise/*.go"], exclude = ["pkg/noise/*_test.go"]),
    importpath = "github.com/vibing/zgrnet/pkg/noise",
    visibility = ["//visibility:public"],
    deps = [
        "@org_golang_x_crypto//blake2s",
        "@org_golang_x_crypto//chacha20poly1305",
        "@org_golang_x_crypto//curve25519",
        "@org_golang_x_crypto//hkdf",
    ],
)

go_test(
    name = "noise_test",
    srcs = glob(["pkg/noise/*_test.go"]),
    embed = [":noise"],
)

# Net layer is built from go/pkg/net/BUILD.bazel
