[package]
name = "zgrnet-noise"
version = "0.1.0"
edition = "2021"
description = "Noise Protocol implementation for zgrnet"
license = "MIT"
build = "build.rs"

[build-dependencies]
cc = "1.2"

[dependencies]
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
blake2 = "0.10"
ring = "0.17"
rand_core = { version = "0.6", features = ["getrandom"] }
rand = "0.8"
zeroize = { version = "1.7", features = ["derive"] }
thiserror = "1.0"
hex = "0.4"
crossbeam-channel = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
criterion = "0.5"
rayon = "1.10"
socket2 = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bench]]
name = "noise_bench"
harness = false

[lib]
name = "noise"
path = "src/lib.rs"

[[example]]
name = "host_test"
path = "examples/host_test.rs"
