[package]
name = "zgrnet-noise"
version = "0.1.0"
edition = "2021"
description = "Noise Protocol implementation for zgrnet"
license = "MIT"
build = "build.rs"

[features]
default = []
tun = []  # Enable TUN device support (requires libtun.a from Zig build)

[build-dependencies]
cc = "1.2"

[dependencies]
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
blake2 = "0.10"
ring = "0.17"
rand_core = { version = "0.6", features = ["getrandom"] }
rand = "0.8"
zeroize = { version = "1.7", features = ["derive"] }
thiserror = "1.0"
hex = "0.4"
crossbeam-channel = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["net", "sync", "rt-multi-thread", "macros", "time"] }
libc = "0.2"

[dev-dependencies]
criterion = "0.5"
rayon = "1.10"
socket2 = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bench]]
name = "noise_bench"
harness = false

[lib]
name = "zgrnet"
path = "src/lib.rs"

[[example]]
name = "host_test"
path = "examples/host_test.rs"

[[example]]
name = "throughput_rust"
path = "../examples/throughput/rust/main.rs"

[[bin]]
name = "async_bench"
path = "../zig/src/async/benchmark/rust/main.rs"

# Note: stream_test and kcp_interop moved to examples/stream_test/rust/ and examples/kcp_test/rust/
