load("@embed_zig//bazel/zig:defs.bzl", "zig_binary", "zig_library", "zig_static_library", "zig_test")
load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")

# =============================================================================
# Common C/ASM configuration
#
# Shared between noise library and example binaries. Binaries need C/ASM too
# because zig build-exe must see all compilation inputs for linking (extern fn
# symbols from C objects are resolved at link time).
# =============================================================================

# KCP patched C sources (platform-independent)
# ikcp.h is vendored at src/kcp/ for @cImport resolution (same as upstream, unpatched)
_KCP_C_SRCS = ["//third_party/kcp:srcs", "src/kcp/ikcp.h"]

# ChaCha20-Poly1305 ASM backend (platform-specific)
_CHACHA20_C_SRCS = select({
    "@platforms//cpu:aarch64": glob([
        "src/noise/chacha20_poly1305/aarch64/*.c",
        "src/noise/chacha20_poly1305/aarch64/*.h",
    ]),
    "//conditions:default": [],
})

# Only use the no-CFI version (Zig's linker doesn't support CFI directives)
_CHACHA20_ASM_SRCS = select({
    "@platforms//cpu:aarch64": ["src/noise/chacha20_poly1305/aarch64/chacha20_poly1305_no_cfi.S"],
    "//conditions:default": [],
})

# Include paths for @cImport: KCP header + ChaCha20 headers
_KCP_C_INCLUDES = ["src/kcp"]

_CHACHA20_C_INCLUDES = select({
    "@platforms//cpu:aarch64": ["src/noise/chacha20_poly1305/aarch64"],
    "//conditions:default": [],
})

# Shared C flags: -O3 for performance, -fno-sanitize=undefined for KCP
# (KCP uses ((TYPE*)0)->member offsetof which triggers zig cc's UB sanitizer)
_C_FLAGS = ["-O3", "-DNDEBUG", "-fno-sanitize=undefined"]

# =============================================================================
# BoringSSL benchmark (C, unchanged)
# =============================================================================

cc_binary(
    name = "bench_boringssl_c",
    srcs = ["bench_boringssl.c"],
    copts = ["-O3"],
    deps = ["@boringssl//:crypto"],
)

# =============================================================================
# Build options modules (replace build.zig addOptions)
# =============================================================================

# Cipher backend auto-detection (provides @import("build_options"))
zig_library(
    name = "build_options",
    main = "build_options.zig",
    srcs = ["build_options.zig"],
    module_name = "build_options",
    visibility = ["//visibility:public"],
)

# TUN build options (provides @import("tun_build_options"))
zig_library(
    name = "tun_build_options",
    main = "tun_build_options.zig",
    srcs = ["tun_build_options.zig"],
    module_name = "tun_build_options",
    visibility = ["//visibility:public"],
)

# =============================================================================
# Main noise library + tests
# =============================================================================

zig_library(
    name = "noise",
    main = "src/noise.zig",
    srcs = glob(["src/**/*.zig"]),
    module_name = "noise",
    deps = [":build_options"],
    c_srcs = _KCP_C_SRCS + _CHACHA20_C_SRCS,
    asm_srcs = _CHACHA20_ASM_SRCS,
    c_includes = _KCP_C_INCLUDES + _CHACHA20_C_INCLUDES,
    c_flags = _C_FLAGS,
    link_libc = True,
    visibility = ["//visibility:public"],
)

# Noise library unit tests — real Bazel test target (replaces zig_run + "test")
zig_test(
    name = "noise_test",
    main = "src/noise.zig",
    srcs = glob(["src/**/*.zig"]),
    module_name = "noise",
    deps = [":build_options"],
    c_srcs = _KCP_C_SRCS + _CHACHA20_C_SRCS,
    asm_srcs = _CHACHA20_ASM_SRCS,
    c_includes = _KCP_C_INCLUDES + _CHACHA20_C_INCLUDES,
    c_flags = _C_FLAGS,
    link_libc = True,
)

# =============================================================================
# TUN static library (for Go CGo and Rust FFI)
# =============================================================================

filegroup(
    name = "tun_header",
    srcs = ["include/tun.h"],
    visibility = ["//visibility:public"],
)

# TUN Zig library (compiled from cabi.zig, separate from noise)
zig_library(
    name = "tun_zig",
    main = "src/tun/cabi.zig",
    srcs = glob(["src/tun/**/*.zig"]),
    module_name = "tun_cabi",
    deps = [":tun_build_options"],
)

# TUN static library (.a) for Go/Rust FFI
zig_static_library(
    name = "tun_static",
    lib = ":tun_zig",
    visibility = ["//visibility:public"],
)

# TUN cc_library with headers and linkopts for Go CGo and Rust FFI
cc_library(
    name = "tun_lib",
    srcs = [":tun_static"],
    hdrs = ["include/tun.h"],
    includes = ["include"],
    linkopts = select({
        "@platforms//os:macos": [
            "-framework CoreFoundation",
            "-framework SystemConfiguration",
        ],
        "@platforms//os:linux": [],
        "@platforms//os:windows": [
            "-lws2_32",
            "-liphlpapi",
        ],
    }),
    visibility = ["//visibility:public"],
)

