load("@embed_zig//bazel/zig:defs.bzl", "zig_library", "zig_package")
load("@rules_cc//cc:defs.bzl", "cc_binary")

# =============================================================================
# C/ASM configuration for noise library
# =============================================================================

# KCP patched C sources (platform-independent)
# ikcp.h is vendored at src/kcp/ for @cImport resolution (same as upstream, unpatched)
_KCP_C_SRCS = ["//third_party/kcp:srcs", "src/kcp/ikcp.h"]

# ChaCha20-Poly1305 ASM backend (platform-specific)
_CHACHA20_C_SRCS = select({
    "@platforms//cpu:aarch64": glob([
        "src/noise/chacha20_poly1305/aarch64/*.c",
        "src/noise/chacha20_poly1305/aarch64/*.h",
    ]),
    "//conditions:default": [],
})

# Only use the no-CFI version (Zig's linker doesn't support CFI directives)
_CHACHA20_ASM_SRCS = select({
    "@platforms//cpu:aarch64": ["src/noise/chacha20_poly1305/aarch64/chacha20_poly1305_no_cfi.S"],
    "//conditions:default": [],
})

# Include paths for @cImport: KCP header + ChaCha20 headers
_KCP_C_INCLUDES = ["src/kcp"]

_CHACHA20_C_INCLUDES = select({
    "@platforms//cpu:aarch64": ["src/noise/chacha20_poly1305/aarch64"],
    "//conditions:default": [],
})

# Shared C flags: -O3 for performance, -fno-sanitize=undefined for KCP
# (KCP uses ((TYPE*)0)->member offsetof which triggers zig cc's UB sanitizer)
_C_FLAGS = ["-O3", "-DNDEBUG", "-fno-sanitize=undefined"]

# =============================================================================
# BoringSSL benchmark (C, unchanged)
# =============================================================================

cc_binary(
    name = "bench_boringssl_c",
    srcs = ["bench_boringssl.c"],
    copts = ["-O3"],
    deps = ["@boringssl//:crypto"],
)

# =============================================================================
# Build options modules (replace build.zig addOptions)
# =============================================================================

# Cipher backend auto-detection (provides @import("build_options"))
zig_library(
    name = "build_options",
    main = "build_options.zig",
    srcs = ["build_options.zig"],
    module_name = "build_options",
    visibility = ["//visibility:public"],
)

# TUN build options (provides @import("tun_build_options"))
zig_library(
    name = "tun_build_options",
    main = "tun_build_options.zig",
    srcs = ["tun_build_options.zig"],
    module_name = "tun_build_options",
    visibility = ["//visibility:public"],
)

# =============================================================================
# Main noise library + tests
# =============================================================================

# Creates :noise (zig_library) + :noise_test (zig_test)
zig_package(
    name = "noise",
    main = "src/noise.zig",
    deps = [":build_options"],
    c_srcs = _KCP_C_SRCS + _CHACHA20_C_SRCS,
    asm_srcs = _CHACHA20_ASM_SRCS,
    c_includes = _KCP_C_INCLUDES + _CHACHA20_C_INCLUDES,
    c_flags = _C_FLAGS,
    link_libc = True,
)

# =============================================================================
# TUN sources exported for //zig/tun package
# =============================================================================

exports_files(
    glob(["src/tun/**/*.zig"]) + ["include/tun.h"],
    visibility = ["//zig/tun:__pkg__"],
)

exports_files(
    glob(["src/dnsmgr/**/*.zig"]) + ["include/dnsmgr.h"],
    visibility = ["//zig/dnsmgr:__pkg__"],
)

