load("@embed_zig//bazel/zig:defs.bzl", "zig_binary", "zig_library", "zig_package", "zig_test")
load("@rules_cc//cc:defs.bzl", "cc_binary")

# =============================================================================
# C configuration for KCP
# =============================================================================

# KCP patched C sources (platform-independent)
# ikcp.h is vendored at src/kcp/ for @cImport resolution (same as upstream, unpatched)
_KCP_C_SRCS = ["//third_party/kcp:srcs", "src/kcp/ikcp.h"]

# Include paths for @cImport: KCP header
_KCP_C_INCLUDES = ["src/kcp"]

# Shared C flags: -O3 for performance, -fno-sanitize=undefined for KCP
# (KCP uses ((TYPE*)0)->member offsetof which triggers zig cc's UB sanitizer)
_C_FLAGS = ["-O3", "-DNDEBUG", "-fno-sanitize=undefined"]

# =============================================================================
# BoringSSL benchmark (C, unchanged)
# =============================================================================

cc_binary(
    name = "bench_boringssl_c",
    srcs = ["bench_boringssl.c"],
    copts = ["-O3"],
    deps = ["@boringssl//:crypto"],
)

# =============================================================================
# Build options modules
# =============================================================================

# TUN build options (provides @import("tun_build_options"))
zig_library(
    name = "tun_build_options",
    main = "tun_build_options.zig",
    srcs = ["tun_build_options.zig"],
    module_name = "tun_build_options",
    visibility = ["//visibility:public"],
)

# =============================================================================
# Main noise library + tests
# =============================================================================

# Creates :noise (zig_library) + :noise_test (zig_test)
#
# Crypto is now generic via Protocol(Crypto) pattern.
# Desktop platforms use StdCrypto (std.crypto wrappers from embed-zig platform/std).
# ChaCha20-Poly1305 ASM acceleration is provided by embed-zig platform/std.
zig_package(
    name = "noise",
    main = "src/noise.zig",
    deps = [
        "@embed_zig//lib/trait",
        "@embed_zig//lib/pkg/async/channel",
        "@embed_zig//lib/pkg/async/timer",
        "@embed_zig//lib/platform/std",
    ],
    c_srcs = _KCP_C_SRCS,
    c_includes = _KCP_C_INCLUDES,
    c_flags = _C_FLAGS,
    link_libc = True,
)

# =============================================================================
# TUN sources exported for //zig/tun package
# =============================================================================

exports_files(
    glob(["src/tun/**/*.zig"]) + ["include/tun.h"],
    visibility = ["//zig/tun:__pkg__", "//zig/cmd:__pkg__"],
)

exports_files(
    glob(["src/dnsmgr/**/*.zig"]) + ["include/dnsmgr.h"],
    visibility = ["//zig/dnsmgr:__pkg__"],
)

# =============================================================================
# TUN module for native Zig binaries (not C ABI export)
# =============================================================================

zig_library(
    name = "tun_zig",
    main = "src/tun/mod.zig",
    srcs = glob(["src/tun/**/*.zig"]),
    module_name = "tun",
    deps = [":tun_build_options"],
    link_libc = True,
)

# =============================================================================
# zigor CLI — unified management tool (replaces zgrnet + zgrnetd)
# =============================================================================

zig_binary(
    name = "zigor_bin",
    main = "cmd_zigor.zig",
    srcs = ["cmd_zigor.zig"],
    deps = [":noise"],
    c_srcs = _KCP_C_SRCS,
    c_includes = _KCP_C_INCLUDES,
    c_flags = _C_FLAGS,
    link_libc = True,
    visibility = ["//visibility:public"],
)


