load("@rules_go//go:def.bzl", "go_test")

# Re-export language-specific binaries
alias(
    name = "go",
    actual = "//e2e/listener/go:listener_test",
    visibility = ["//visibility:public"],
)

alias(
    name = "rust",
    actual = "//e2e/listener/rust:listener_test",
    visibility = ["//visibility:public"],
)

alias(
    name = "zig",
    actual = "//e2e/listener/zig:listener_test",
    visibility = ["//visibility:public"],
)

# Test data files
filegroup(
    name = "configs",
    srcs = ["config.json"],
    visibility = ["//visibility:public"],
)

# Cross-language Node.Listen interop test.
# 9 test cases: all 3×3 pairs of Go, Rust, Zig (opener × accepter).
# Each test: opener sends proto=128 (chat) + proto=200 (file),
# accepter uses Listen(128) for chat, AcceptStream for file.
go_test(
    name = "interop_test",
    srcs = ["interop_test.go"],
    importpath = "github.com/vibing/zgrnet/e2e/listener",
    data = [
        "//e2e/listener/go:listener_test",
        "//e2e/listener/rust:listener_test",
    ] + select({
        "@platforms//os:macos": ["//e2e/listener/zig:listener_test"],
        "//conditions:default": [],
    }),
    tags = [
        "local",
        "exclusive",
    ],
    timeout = "long",
    visibility = ["//visibility:public"],
)
