load("@rules_go//go:def.bzl", "go_test")

# Re-export language-specific binaries
alias(
    name = "go",
    actual = "//e2e/node/go:node_test",
    visibility = ["//visibility:public"],
)

alias(
    name = "rust",
    actual = "//e2e/node/rust:node_test",
    visibility = ["//visibility:public"],
)

alias(
    name = "zig",
    actual = "//e2e/node/zig:node_test",
    visibility = ["//visibility:public"],
)

# Test data files
filegroup(
    name = "configs",
    srcs = ["config.json"],
    visibility = ["//visibility:public"],
)

# Cross-language Node SDK interop test.
# Go runner binary orchestrates Go ↔ Rust (and optionally Zig) pairs.
go_test(
    name = "interop_test",
    srcs = ["interop_test.go"],
    importpath = "github.com/vibing/zgrnet/e2e/node",
    data = [
        "//e2e/node/go:node_test",
        "//e2e/node/rust:node_test",
    ] + select({
        "@platforms//os:macos": ["//e2e/node/zig:node_test"],
        "//conditions:default": [],
    }),
    tags = [
        "e2e",
        "e2e-ci",
        "requires-network",
        "exclusive",
    ],
    timeout = "long",
    visibility = ["//visibility:public"],
)
